--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
         <h2 class="pb-2 border-bottom">Icon grid</h2>
     
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5">
+
+          <!-- Add Bootstrap Icon -->
           <div class="col d-flex align-items-start">
 
             <svg class="bi text-muted flex-shrink-0 me-3" xmlns="http://www.w3.org/2000/svg" width="1.75em" height="1.75em" fill="currentColor" class="bi bi-bootstrap-fill" viewBox="0 0 16 16">
@@ -70,6 +72,9 @@
               <p>Paragraph of text beneath the heading to explain the heading.</p>
             </div>
           </div>
+          <!-- End bootstrap Icon -->
+
+          <!-- Add CPU-Fill Icon -->
           <div class="col d-flex align-items-start">
 
             <svg class="bi text-muted flex-shrink-0 me-3" xmlns="http://www.w3.org/2000/svg" width="1.75em" height="1.75em" fill="currentColor" class="bi bi-cpu-fill" viewBox="0 0 16 16">
@@ -83,6 +88,9 @@
               <p>Paragraph of text beneath the heading to explain the heading.</p>
             </div>
           </div>
+          <!-- End CPU-Fill Icon -->
+
+          <!-- Add Calendar Icon -->
           <div class="col d-flex align-items-start">
 
             <svg class="bi text-muted flex-shrink-0 me-3" xmlns="http://www.w3.org/2000/svg" width="1.75em" height="1.75em" fill="currentColor" class="bi bi-calendar3" viewBox="0 0 16 16">
@@ -96,6 +104,9 @@
               <p>Paragraph of text beneath the heading to explain the heading.</p>
             </div>
           </div>
+          <!-- End Calendar Icon -->
+
+          <!-- Add Home Icon -->
           <div class="col d-flex align-items-start">
 
             <svg class="bi text-muted flex-shrink-0 me-3" xmlns="http://www.w3.org/2000/svg" width="1.75em" height="1.75em" fill="currentColor" class="bi bi-house-door" viewBox="0 0 16 16">
@@ -108,6 +119,9 @@
               <p>Paragraph of text beneath the heading to explain the heading.</p>
             </div>
           </div>
+          <!-- End Home Icon -->
+
+          <!-- Add Speedometer Icon -->
           <div class="col d-flex align-items-start">
 
             <svg class="bi text-muted flex-shrink-0 me-3" xmlns="http://www.w3.org/2000/svg" width="1.75em" height="1.75em" fill="currentColor" class="bi bi-speedometer2" viewBox="0 0 16 16">
@@ -121,6 +135,9 @@
               <p>Paragraph of text beneath the heading to explain the heading.</p>
             </div>
           </div>
+          <!-- End Speedometer Icon -->
+
+          <!-- Add Toggle Icon -->
           <div class="col d-flex align-items-start">
 
             <svg class="bi text-muted flex-shrink-0 me-3" xmlns="http://www.w3.org/2000/svg" width="1.75em" height="1.75em" fill="currentColor" class="bi bi-toggles2" viewBox="0 0 16 16">
@@ -135,6 +152,9 @@
               <p>Paragraph of text beneath the heading to explain the heading.</p>
             </div>
           </div>
+          <!-- End Toggle Icon -->
+
+          <!-- Add GEO-Fill Icon -->
           <div class="col d-flex align-items-start">
 
             <svg class="bi text-muted flex-shrink-0 me-3" xmlns="http://www.w3.org/2000/svg" width="1.75em" height="1.75em" fill="currentColor" class="bi bi-geo-fill" viewBox="0 0 16 16">
@@ -147,6 +167,9 @@
               <p>Paragraph of text beneath the heading to explain the heading.</p>
             </div>
           </div>
+          <!-- End GEO-Fill Icon -->
+
+          <!-- Add Tools Icon -->
           <div class="col d-flex align-items-start">
 
             <svg class="bi text-muted flex-shrink-0 me-3" xmlns="http://www.w3.org/2000/svg" width="1.75em" height="1.75em" fill="currentColor" class="bi bi-tools" viewBox="0 0 16 16">
@@ -159,6 +182,7 @@
               <p>Paragraph of text beneath the heading to explain the heading.</p>
             </div>
           </div>
+          <!-- End Tools Icon -->
         </div>
     </div>
     <!-- End Icon Grid -->
